# quickstart-cpp-ogre

./: CMakeLists.txt  Readme.md
src/launcher/: CMakeLists.txt  main.cpp
src/launcher/cmake/: plugins.cfg.in  resources.cfg.in
tests/sample_test/: CMakeLists.txt
