set(OGRE_APP_LAUNCHER_PRJ "launcher")

# Add all source files recursively
FILE(GLOB_RECURSE OGRE_APP_LAUNCHER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE(GLOB_RECURSE OGRE_APP_LAUNCHER_HDR "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

# Add executable
add_executable(
  ${OGRE_APP_LAUNCHER_PRJ} 
  ${OGRE_APP_LAUNCHER_SRC} 
  ${OGRE_APP_LAUNCHER_HDR}
)

target_compile_features(
  ${OGRE_APP_LAUNCHER_PRJ} PUBLIC cxx_std_17
)

# Link app to ogre
target_link_libraries(
  ${OGRE_APP_LAUNCHER_PRJ} 
  OgreBites
)

# Create plugins,media directory
file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins)
file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/media)

# Copy plugins
add_custom_command(
    TARGET ${OGRE_APP_LAUNCHER_PRJ} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy 
    ${OGRE_BINARY_DIR}/lib/Plugin_* 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins
)

# Copy Codec_STBI
add_custom_command(
    TARGET ${OGRE_APP_LAUNCHER_PRJ} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy 
    ${OGRE_BINARY_DIR}/lib/Codec_STBI* 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins
)

# Copy render systems
add_custom_command(
    TARGET ${OGRE_APP_LAUNCHER_PRJ} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy 
    ${OGRE_BINARY_DIR}/lib/RenderSystem_* 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins
)

# Copy ogre core media
add_custom_command(
    TARGET ${OGRE_APP_LAUNCHER_PRJ} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${OGRE_SOURCE_DIR}/Media
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/media
)

# Check Ogre Available Plugins & RenderSystems
if (NOT OGRE_BUILD_RENDERSYSTEM_D3D9)
  set(OGRE_COMMENT_RENDERSYSTEM_D3D9 "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_D3D11)
  set(OGRE_COMMENT_RENDERSYSTEM_D3D11 "#")
endif ()
if (NOT MINGW AND CMAKE_SYSTEM_VERSION VERSION_LESS "6.0")
  set(OGRE_COMMENT_RENDERSYSTEM_D3D11 "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_GL)
  set(OGRE_COMMENT_RENDERSYSTEM_GL "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_GL3PLUS)
  set(OGRE_COMMENT_RENDERSYSTEM_GL3PLUS "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_GLES2)
  set(OGRE_COMMENT_RENDERSYSTEM_GLES2 "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_METAL)
  set(OGRE_COMMENT_RENDERSYSTEM_METAL "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_TINY)
  set(OGRE_COMMENT_RENDERSYSTEM_TINY "#")
endif ()
if (NOT OGRE_BUILD_RENDERSYSTEM_VULKAN)
  set(OGRE_COMMENT_RENDERSYSTEM_VULKAN "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_BSP)
  set(OGRE_COMMENT_PLUGIN_BSP "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_OCTREE)
  set(OGRE_COMMENT_PLUGIN_OCTREE "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_PCZ)
  set(OGRE_COMMENT_PLUGIN_PCZ "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_PFX)
  set(OGRE_COMMENT_PLUGIN_PARTICLEFX "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_CG)
  set(OGRE_COMMENT_PLUGIN_CG "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_GLSLANG)
  set(OGRE_COMMENT_PLUGIN_GLSLANG "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_STBI)
  set(OGRE_COMMENT_PLUGIN_STBI "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_DOT_SCENE)
  set(OGRE_COMMENT_PLUGIN_DOT_SCENE "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_ASSIMP)
  set(OGRE_COMMENT_PLUGIN_ASSIMP "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_FREEIMAGE OR OGRE_BUILD_PLUGIN_STBI)
  # has to be explicitely requested by disabeling STBI
  set(OGRE_COMMENT_PLUGIN_FREEIMAGE "#")
endif ()
if (NOT OGRE_BUILD_PLUGIN_EXRCODEC OR NOT OGRE_COMMENT_PLUGIN_FREEIMAGE)
  # overlaps with freeimage
  set(OGRE_COMMENT_PLUGIN_EXRCODEC "#")
endif ()
if (NOT OGRE_BUILD_COMPONENT_TERRAIN)
  set(OGRE_COMMENT_COMPONENT_TERRAIN "#")
endif ()
if (NOT OGRE_BUILD_COMPONENT_RTSHADERSYSTEM)
  set(OGRE_COMMENT_COMPONENT_RTSHADERSYSTEM "#")
endif ()
if (NOT OGRE_BUILD_COMPONENT_VOLUME)
  set(OGRE_COMMENT_COMPONENT_VOLUME "#")
endif ()
if (NOT OGRE_BUILD_COMPONENT_TERRAIN OR NOT OGRE_BUILD_COMPONENT_PAGING)
  set(OGRE_COMMENT_SAMPLE_ENDLESSWORLD "#")
endif ()
if(NOT OGRE_BUILD_TESTS)
  set(OGRE_COMMENT_PLAYPENTESTS "#")
endif()

# Copy configuration files
configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/resources.cfg.in 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources.cfg
)
configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/plugins.cfg.in 
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins.cfg
)

install(
  TARGETS ${OGRE_APP_LAUNCHER_PRJ}
  RUNTIME 
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  CONFIGURATIONS All
)

install(
  DIRECTORY ${OGRE_BINARY_DIR}/lib
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  CONFIGURATIONS All
)
 